--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -6,7 +6,7 @@ backend:
 publish_mode: editorial_workflow
 
 # This line should *not* be indented
-media_folder: "assets/images" # Media files will be stored in the repo under images/uploads "images/uploads"
+media_folder: "content/blog" # Media files will be stored in the repo under images/uploads "images/uploads"
 
 
 collections:
